src/objects/DD_Product_on_Order__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This will store all products which are not yet in Demo pool.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Pool__c</fullName>
        <label>Demo Pool</label>
        <referenceTo>DD_Demo_Pool__c</referenceTo>
        <relationshipLabel>Product on Order</relationshipLabel>
        <relationshipName>Product_on_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Release__c</fullName>
        <label>Expected Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product On Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Material__c</columns>
        <columns>Quantity__c</columns>
        <columns>Expected_Release__c</columns>
        <columns>Comments__c</columns>
        <columns>Demo_Pool__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PoO-{00000}</displayFormat>
        <label>Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product on Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>